--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
     ],
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^2.9",
-        "yiisoft/yii2-dev": "2.0.15.1",
+        "yiisoft/yii2-dev": "^2.0.15",
         "phpunit/phpunit": "^7.2"
     },
     "scripts": {
