--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,13 @@
             "SamIT\\Yii2\\MariaDb\\" : "src/"
         }
     },
+    "autoload-dev": {
+        "psr-4": {
+            "SamIT\\Yii2\\MariaDb\\Tests\\": [
+                "tests/"
+            ]
+        }
+    },
     "repositories": [
         {
             "type": "composer",
@@ -21,18 +28,30 @@
         }
     ],
     "require-dev": {
-        "friendsofphp/php-cs-fixer": "^2.9",
+        "squizlabs/php_codesniffer": "^3.5",
         "yiisoft/yii2-dev": "dev-master",
-        "phpunit/phpunit": "^7.2"
+        "phpunit/phpunit": "^9.1",
+        "brainmaestro/composer-git-hooks": "^2.8"
     },
     "scripts": {
-        "test": "docker-compose -f tests/docker-compose.yml run --rm phpunit",
-        "dc": "docker-compose -f tests/docker-compose.yml",
-        "test-with-cc": "docker-compose -f tests/docker-compose.yml run --rm phpunit-coverage",
-        "lint": "vendor/bin/php-cs-fixer fix --dry-run --verbose --diff",
-        "lint-fix": "vendor/bin/php-cs-fixer fix --verbose"
+        "post-install-cmd": "cghooks add --ignore-lock",
+        "test": "vendor/bin/phpunit",
+        "lint": "vendor/bin/phpcs",
+        "lint-fix": "vendor/bin/phpcbf"
     },
     "config": {
         "process-timeout": 1200
+    },
+    "extra": {
+        "hooks": {
+            "pre-commit": [
+                "echo committing as $(git config user.name)",
+                "composer lint-fix",
+                "composer test"
+            ],
+            "commit-msg": [
+                "npx commitlint -e"
+            ]
+        }
     }
 }
