--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -58,6 +58,8 @@ jobs:
             sleep 1
           done
       - name: Run tests
+        env:
+          PORT: ${{ job.services.mariadb.ports[3306] }}
         run: composer test -- --coverage-clover coverage.xml --coverage-text
       - name: Get Ocular
         run: wget https://scrutinizer-ci.com/ocular.phar
