--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -60,7 +60,7 @@ jobs:
       - name: Set up database
         env:
           PORT: ${{ job.services.mariadb.ports[3306] }}
-        run: mysql -h"127.0.0.1" -P"$PORT" yiitest < tests/data/mariadb.sql
+        run: mysql -u root -h"127.0.0.1" -P"$PORT" yiitest < tests/data/mariadb.sql
       - name: Run tests
         env:
           PORT: ${{ job.services.mariadb.ports[3306] }}
