--- a/package.json
+++ b/package.json
@@ -7,5 +7,11 @@
     "commitlint": "^12",
     "conventional-changelog-conventionalcommits": "^4.5",
     "semantic-release": "^17.4"
+  },
+  "dependencies": {
+    "husky": "^6.0.0"
+  },
+  "scripts": {
+    "prepare": "husky install"
   }
 }
