--- a/composer.json
+++ b/composer.json
@@ -34,11 +34,11 @@
         "php": ">= 7.4",
         "ext-pdo": "*",
         "ext-pdo_mysql": "*",
-        "yiisoft/yii2": "~2.0.14"
+        "yiisoft/yii2": "> 2.0.14"
     },
     "require-dev": {
         "squizlabs/php_codesniffer": "^3.5",
-        "yiisoft/yii2-dev": "dev-master",
+        "yiisoft/yii2-dev": "^2",
         "phpunit/phpunit": "^9.1",
         "brainmaestro/composer-git-hooks": "^2.8"
     },
