--- a/composer.json
+++ b/composer.json
@@ -37,19 +37,18 @@
         "yiisoft/yii2": "> 2.0.14"
     },
     "require-dev": {
-        "squizlabs/php_codesniffer": "^3.5",
         "yiisoft/yii2-dev": "^2",
-        "phpunit/phpunit": "^9.1",
-        "brainmaestro/composer-git-hooks": "^2.8"
+        "phpunit/phpunit": "^9",
+        "symplify/easy-coding-standard": "^10.3"
     },
     "scripts": {
-        "post-install-cmd": "cghooks add --ignore-lock",
-        "test": "vendor/bin/phpunit",
-        "lint": "vendor/bin/phpcs",
-        "lint-fix": "vendor/bin/phpcbf"
+        "test": "vendor/bin/phpunit"
     },
     "config": {
-        "process-timeout": 1200
+        "process-timeout": 1200,
+        "allow-plugins": {
+            "yiisoft/yii2-composer": true
+        }
     },
     "extra": {
         "hooks": {
