--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -9,10 +9,10 @@ jobs:
       - name: Set up PHP
         uses: shivammathur/setup-php@v2
         with:
-          php-version: '7.4'
-          tools: phpcs
+          php-version: '8.1'
+          tools: symplify/easy-coding-standard
       - name: Test code style
-        run: phpcs
+        run: ecs
   test:
     name: Run tests
     runs-on: ubuntu-latest
@@ -48,8 +48,6 @@ jobs:
           restore-keys: ${{ matrix.php }}-composer-
       - name: Install dependencies
         run: composer install --prefer-dist
-      - name: Test code style
-        run: composer lint
       - name: Verify MariaDB connection
         env:
           PORT: ${{ job.services.mariadb.ports[3306] }}
