--- a/tests/docker/Dockerfile
+++ b/tests/docker/Dockerfile
@@ -1,9 +1,6 @@
-FROM alpine:edge
-RUN apk --no-cache -X http://nl.alpinelinux.org/alpine/edge/testing add \
-  php7 \
-  php7-pdo \
-  php7-pdo_mysql \
-  php7-dom \
-  php7-tokenizer \
-  php7-json \
-  php7-pecl-pcov \
+FROM php:8.1-cli-alpine
+ADD https://github.com/mlocati/docker-php-extension-installer/releases/latest/download/install-php-extensions /usr/local/bin/
+RUN chmod +x /usr/local/bin/install-php-extensions && \
+    install-php-extensions \
+    pdo_mysql \
+    pcov
