--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -62,9 +62,9 @@ jobs:
       - name: Run tests
         env:
           PORT: ${{ job.services.mariadb.ports[3306] }}
-        run: composer test -- --coverage-clover coverage.xml --coverage-text
+        run: composer test -- --coverage-clover clover.xml --coverage-text
       - name: Push code coverage
-        run: $(composer global config bin-dir --absolute)/php-coveralls coverage.xml
+        run: $(composer global config bin-dir --absolute)/php-coveralls -x clover.xml --json_path=upload.json
   release:
     name: Automated release
     needs: [test, cs]
