ci: specify secret as mentioned in docs

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -64,7 +64,9 @@ jobs:
           PORT: ${{ job.services.mariadb.ports[3306] }}
         run: composer test -- --coverage-clover clover.xml --coverage-text
       - name: Push code coverage
-        run: $(composer global config bin-dir --absolute)/php-coveralls -x clover.xml --json_path=upload.json
+        env:
+          COVERALLS_REPO_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: $(composer global config bin-dir --absolute)/php-coveralls -x clover.xml --json_path=upload.json -v
   release:
     name: Automated release
     needs: [test, cs]
