--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,5 +1,9 @@
 name: Continous integration
-on: [push, pull_request]
+on:
+  pull_request:
+  push:
+    branches:
+      - master
 jobs:
   cs:
     name: Check code style
@@ -10,9 +14,9 @@ jobs:
         uses: shivammathur/setup-php@v2
         with:
           php-version: '8.4'
-          tools: symplify/easy-coding-standard
+      - uses: ramsey/composer-install@v3
       - name: Test code style
-        run: ecs
+        run: vendor/bin/ecs
   test:
     name: Run tests
     runs-on: ubuntu-latest
